# Gitcoin

./: .gitignore  .pyproject.toml.swp  CNAME  Gitcoin.glb  Gitcoin_gen2.glb  LICENSE  README.md  gitcoin_new.gcode  index.html  pyproject.toml  requirements.txt  rsa  rsa.pub  test.py
animations/: miku.py
gitcoin/: logic.py  mining.py  run.py  transact.py  utils.py
gitcoin/animations/: miku.py
gitcoin/animations/text/: dollar.txt  logo.txt  miningmsg.txt  miningsuc.txt  plane.txt  slots.txt  slotssuc.txt  wheel.txt
gitcoin/hashing_utils/: Makefile  mine_block.py  mine_cpu  mine_cpu.c  mine_cpu.cpp  mine_gpu.cpp  mine_gpu_kernel.cu  mine_gpu_kernel.h  move_to_test.sh  sha1.h
src/: logic.py  logictests.py  main.py  mining.py  run.py  transact.py
src/hashing_utils/: Makefile  mine_block.py  mine_cpu  mine_cpu.c
tests/: test_logic.py  test_transact.py
