[project]
name = "gitcoin"
version = "1.0"
description = "Next-Gen crypocurrency developed by developers, for developers."
keywords = ["git", "cryptocurrency", "blockchain"]
authors = []
dependencies = [
    "colorist",
    "gitpython",
    "pytest"
]

[project.scripts]
gitcoin = "gitcoin.run:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gitcoin"]

[[tool.setuptools.ext-modules]]
name = "gitcoin.hashing_utils.mine_cpu"
sources = [ "gitcoin/hashing_utils/mine_cpu.cpp", "gitcoin/hashing_utils/sha1.c" ]
include-dirs = ["src/hashing_utils"]
py-limited-api = true

# [[tool.setuptools.ext-modules]]
# name = "gitcoin.hashing_utils.mine_gpu"
# sources = [ "gitcoin/hashing_utils/mine_gpu.cu" ]
# include-dirs = ["src/hashing_utils"]
# py-limited-api = true
# command = "nvcc"
# optional = true

