[project]
name = "gitcoin"
version = "1.0"
description = "Next-Gen crypocurrency developed by developers, for developers."
keywords = ["git", "cryptocurrency", "blockchain"]
authors = [
    { name = "Bennett Gilig", email = "bgillig@umass.edu" },
    { name = "Austin Henlotter", email = "ahenlotter@umass.edu" },
    { name = "Junyang Lu", email = "lujunyang04@gmail.edu" },
    { name = "Maxwell Tang", email = "maxwelltang@umass.edu" },
    { name = "Steven Zhang", email = "panda.piano.sgz@gmail.com" },
    ]
dependencies = [
    "cffi==1.17.1",
    "colorist==1.8.3",
    "cryptography==44.0.1",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pillow==11.1.0",
    "pluggy==1.5.0",
    "pycparser==2.22",
    "pytest==8.3.4",
    "smmap==5.0.2"
]
license = { text = "MIT" }

[project.scripts]
gitcoin = "gitcoin.run:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gitcoin"]

[[tool.setuptools.ext-modules]]
name = "gitcoin.hashing_utils.mine_cpu"
sources = [ "gitcoin/hashing_utils/mine_cpu.cpp", "gitcoin/hashing_utils/sha1.c"]
include-dirs = ["src/hashing_utils"]
py-limited-api = true

# [[tool.setuptools.ext-modules]]
# name = "gitcoin.hashing_utils.mine_gpu"
# sources = [ "gitcoin/hashing_utils/mine_gpu.cu" ]
# include-dirs = ["src/hashing_utils"]
# py-limited-api = true
# command = "nvcc"
# optional = true

